Update form styling   * Removed button div code (will remain within app-title)   * Removed duplicate button display on menu view   * All forms now have app-title class applied   * Forced scrollbar to always visible     - Quick fix to view shifting left/right when changing views   * Extended width of menu item create and edit forms   * Extended width of user edit form   * Changed input tag with textarea for item desc and name fields

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -17,6 +17,7 @@ body {
   background-size: cover;
   // color: white;
   // font-family: 'Lato', sans-serif;
+  overflow: scroll;
   text-align: center;
 }
 
@@ -27,4 +28,12 @@ body {
 .row {
   margin: auto;
   margin-bottom: 20px;
+}
+
+textarea {
+  resize: vertical;
+}
+
+th {
+  text-align: center;
 }
